--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', includes: ['*.jar'])
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -35,6 +36,7 @@ dependencies {
     compile 'com.jcodecraeer:xrecyclerview:1.6.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     //    implementation 'com.android.support:support-v4:28.0.0'
 }
 configurations.all {
